[Task/#0030] - Fixed the overflow of the modal to scroll

--- a/angular-app/src/assets/Admin/scss/admin-display-item-menu.component.scss
+++ b/angular-app/src/assets/Admin/scss/admin-display-item-menu.component.scss
@@ -67,6 +67,16 @@ body {
     float: right;
 }
 
+textarea {
+    width: 100%;
+    height: 100px;
+}
+
 .modal-custom-size {
     width: 400px;
+}
+
+.modal-body {
+    max-height: calc(100vh - 210px);
+    overflow-y: auto;
 }
